@@ -40,6 +40,7 @@
 #include <cmath>
 #include <vector>
 #include <memory>
+#include <cassert>
 
 #ifndef GEOS_DEBUG
 #define GEOS_DEBUG 0
@@ -225,9 +226,11 @@ OffsetCurveSetBuilder::addPolygon(const Polygon *p)
 
 	delete shellCoord;
 
-	for (int i=0;i<p->getNumInteriorRing(); i++)
+	for (size_t i=0, n=p->getNumInteriorRing(); i<n; ++i)
 	{
-		const LinearRing *hole=(const LinearRing *)p->getInteriorRingN(i);
+		const LineString *hls=p->getInteriorRingN(i);
+		assert(dynamic_cast<const LinearRing *>(hls));
+		const LinearRing *hole=static_cast<const LinearRing *>(hls);
 		CoordinateSequence *holeCoord=CoordinateSequence::removeRepeatedPoints(hole->getCoordinatesRO());
 
 		// optimization - don't bother computing buffer for this hole
@@ -332,6 +335,9 @@ OffsetCurveSetBuilder::isTriangleErodedCompletely(
 
 /**********************************************************************
  * $Log$
+ * Revision 1.35  2006/06/09 07:42:13  strk
+ * * source/geomgraph/GeometryGraph.cpp, source/operation/buffer/OffsetCurveSetBuilder.cpp, source/operation/overlay/OverlayOp.cpp, source/operation/valid/RepeatedPointTester.cpp: Fixed warning after Polygon ring accessor methods changed to work with size_t. Small optimizations in loops.
+ *
  * Revision 1.34  2006/05/03 09:14:22  strk
  * * source/operation/buffer/OffsetCurveSetBuilder.cpp: used auto_ptr to protect leaks of CoordinateSequence
  * * source/noding/ScaledNoder.cpp, source/headers/geos/noding/ScaledNoder.h: ported JTS bugfix in scale method.
