@@ -1,3 +1,13 @@
+2006-06-09 Sandro Santilli <strk@refractions.net>
+
+	* source/geomgraph/GeometryGraph.cpp,
+	source/operation/buffer/OffsetCurveSetBuilder.cpp,
+	source/operation/overlay/OverlayOp.cpp,
+	source/operation/valid/RepeatedPointTester.cpp:
+	Fixed warning after Polygon ring accessor methods
+	changed to work with size_t. Small optimizations
+	in loops.
+
 2006-06-08 Mateusz Loskot <mateusz@loskot.net>
 
         * tests/unit/geom/DimensionTest.cpp (1.3): Fixed no-effect
